# box4d

./: .gitignore  Cargo.toml  README.md  index.html
assets/shaders/: slice.frag  slice.vert  sprite.frag  sprite.vert  tri.vert
src/: actor.rs  collision.rs  constraints.rs  contact.rs  draw_state.rs  ga.rs  gjk.rs  input.rs  joint.rs  main.rs  mesh.rs  mesh_renderer.rs  mpr.rs  na.rs  physics.rs  renderer.rs  rigidbody.rs  sprite_renderer.rs  texture.rs  wgputil.rs
